# spectrum

./: .cirrus.yml  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  dev_requirements.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: nigiri-infra.yml  pypi-publish.yml  pytest.yml  stack-infra.yml
src/cryptoadvance/specterext/spectrum/: __main__.py  bridge_rpc.py  config.py  configold.py  controller.py  controller_helpers.py  db.py  elsock.py  server.py  service.py  spectrum.py  spectrum_node.py
src/cryptoadvance/specterext/spectrum/electrum/: network.py  serverlist_online.txt
src/cryptoadvance/specterext/spectrum/server_endpoints/: core_api.py  healthz.py  ui.py
src/cryptoadvance/specterext/spectrum/server_endpoints/templates/spectrum/: index.jinja  settings.jinja  spectrum_setup.jinja
src/cryptoadvance/specterext/spectrum/server_endpoints/templates/spectrum/components/: bitcoin_core_info.jinja  spectrum_info.jinja  spectrum_tab.jinja
src/cryptoadvance/specterext/spectrum/server_endpoints/templates/spectrum/welcome/components/: get_started.jinja
src/cryptoadvance/specterext/spectrum/templates/spectrum/: index.jinja  settings.jinja  spectrum_setup.jinja  spectrum_setup_beta.jinja
src/cryptoadvance/specterext/spectrum/templates/spectrum/components/: spectrum_node_connection.jinja  spectrum_node_logo.jinja
src/cryptoadvance/specterext/spectrum/templates/spectrum/welcome/components/: get_started.jinja
src/cryptoadvance/spectrum/: __main__.py  config.py  db.py  elsock.py  error.py  server.py  spectrum.py  spectrum_error.py  util.py  util_specter.py
src/cryptoadvance/spectrum/cli/: __init__.py  cli_server.py
src/cryptoadvance/spectrum/server_endpoints/: core_api.py  healthz.py
tests/: bitcoin_comp_layer.py  conftest.py  fix_devices_and_wallets.py  fix_infrastructure.py  fix_keys_and_seeds.py  fix_keys_and_seeds_embit.py  fix_testnet.py  test_bdk.py  test_bridge_rpc.py  test_config.py  test_controller_helpers.py  test_electrum_network.py  test_elsock.py  test_ext_bridge_rpc.py  test_se_healthz.py  test_spectrum.py  test_spectrum_node.py  test_spectrum_rpc.py  test_util.py
tests/integration/: basics.py  elsock.py  elsock_test.py  spectrum_test.py  wallet_import_rescan.py
utils/: compile_and_run_electrs.py  release.sh
